Add arrow encoding to spooling